Service Regression/tests/00DM0000001eO1fMAE/objects/Opportunity.object
<CustomObject>
    <businessProcesses>
        <fullName>ATC</fullName>
        <isActive>true</isActive>
        <values>
            <fullName>Closed Lost</fullName>
        </values>
        <values>
            <fullName>Closed Realized</fullName>
        </values>
        <values>
            <fullName>Closed Won</fullName>
        </values>
        <values>
            <fullName>Contract Submitted</fullName>
        </values>
        <values>
            <fullName>Planning</fullName>
        </values>
        <values>
            <fullName>Presentation</fullName>
        </values>
        <values>
            <fullName>Prospect</fullName>
        </values>
    </businessProcesses>
    <businessProcesses>
        <fullName>Haystak</fullName>
        <isActive>true</isActive>
        <values>
            <fullName>Closed Lost</fullName>
        </values>
        <values>
            <fullName>Closed Won</fullName>
        </values>
        <values>
            <fullName>Contract Submitted</fullName>
        </values>
    </businessProcesses>
    <fields>
        <fullName>ATC_Addressed_Need__c</fullName>
        <label>ATC Addressed Need</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ATC_Value_Provided__c</fullName>
        <label>ATC Value Provided</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ATDSA_bookshelf__CurrentGenerators__c</fullName>
        <label>Current Generator(s)</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ATDSA_bookshelf__DeliveryInstallationStatus__c</fullName>
        <label>Delivery/Installation Status</label>
        <picklist>
            <picklistValues>
                <fullName>In progress</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Yet to begin</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Completed</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>ATDSA_bookshelf__MainCompetitors__c</fullName>
        <label>Main Competitor(s)</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ATDSA_bookshelf__OrderNumber__c</fullName>
        <label>Order Number</label>
        <length>8</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ATDSA_bookshelf__TrackingNumber__c</fullName>
        <label>Tracking Number</label>
        <length>12</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account_District__c</fullName>
        <description>Account District from the Account page.</description>
        <formula>TEXT(Account.District__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Account District</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account_Region__c</fullName>
        <description>Account Region from the Account page.</description>
        <formula>TEXT(  Account.Region__c  )</formula>
        <label>Account Region</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BU_Lead__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Populates if the Opportunity was the result of a BU Lead.</description>
        <label>Related BU Referral</label>
        <referenceTo>BU_Referrals__c</referenceTo>
        <relationshipLabel>Opportunities</relationshipLabel>
        <relationshipName>Opportunities</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>BU_Type__c</fullName>
        <description>Defines the BU Type as Media or Software, based on the BU.</description>
        <label>BU Type</label>
        <length>8</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BU__c</fullName>
        <description>Business Unit that the opportunity relates to.</description>
        <label>Business Unit</label>
        <picklist>
            <picklistValues>
                <fullName>ATC Media</fullName>
                <color>#FF6600</color>
            </picklistValues>
            <picklistValues>
                <fullName>Haystak</fullName>
                <color>#FF9900</color>
            </picklistValues>
            <picklistValues>
                <fullName>HomeNet</fullName>
                <color>#78C953</color>
            </picklistValues>
            <picklistValues>
                <fullName>KBB</fullName>
                <color>#000066</color>
            </picklistValues>
            <picklistValues>
                <fullName>TIM</fullName>
                <color>#FF9966</color>
            </picklistValues>
            <picklistValues>
                <fullName>vAuto</fullName>
                <color>#F3D904</color>
            </picklistValues>
            <picklistValues>
                <fullName>VinSolutions</fullName>
                <color>#6633FF</color>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Billing_City_Display__c</fullName>
        <formula>IF(
Custom_Billing_Address__c = True,
Billing_City__c,
Account.BillingCity
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Billing City (Display)</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Billing_City__c</fullName>
        <label>Billing City</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Billing_State_Display__c</fullName>
        <formula>IF(
Custom_Billing_Address__c = True,
Billing_State__c,
Account.BillingState
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Billing State (Display)</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Billing_State__c</fullName>
        <label>Billing State</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Billing_Street_Display__c</fullName>
        <formula>IF(
Custom_Billing_Address__c = True,
Billing_Street__c,
Account.BillingStreet
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Billing Street (Display)</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Billing_Street__c</fullName>
        <label>Billing Street</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Billing_Zip_Postal_Code_Display__c</fullName>
        <formula>IF(
Custom_Billing_Address__c = True,
Billing_Zip_Postal_Code__c,
Account.BillingPostalCode
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Billing Zip/Postal Code (Display)</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Billing_Zip_Postal_Code__c</fullName>
        <label>Billing Zip/Postal Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CCall_Flag_updated_by__c</fullName>
        <description>Updated by system workflow when a user updates the Coordination Call flag to true.</description>
        <inlineHelpText>Updated by system workflow when a user updates the Coordination Call flag to true.</inlineHelpText>
        <label>CCall Flag updated by</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Campaign_Types__c</fullName>
        <label>Campaign Types</label>
        <picklist>
            <picklistValues>
                <fullName>Bing Finance</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bing Managed</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bing Service and Parts</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Competitors Bing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Competitors Google</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Display</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Dynamic (Enhanced)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Facebook Display</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Fan Generation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>General Used Bing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>General Used Brand Bing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>General Used Google</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>General Used Brand Google</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Google Enhanced</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Google Finance</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Google Service and Parts</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Promotional</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Remarketing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SEO</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sponsored Stories</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>You Tube Per-roll</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Z-Managed</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Z- Mobile</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Z- Mobile Dynamic</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Cloned_with_Products__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Cloned with Products</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Close_Date_Alert__c</fullName>
        <description>If the close date has passed, and the opportunity is still open, an &quot;Update Close Date&quot; image appears.</description>
        <formula>IF( CloseDate &lt; today() &amp;&amp;  IsClosed = False, 
 IMAGE(&quot;https://c.na9.content.force.com/servlet/servlet.FileDownload?file=015E0000001Gjka&quot;, &quot;update close Date&quot; ), NULL)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Close Date Alert</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Competitors__c</fullName>
        <description>Used to enter any competitor for this opportunity.</description>
        <label>Competitor(s)</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contact_Email__c</fullName>
        <label>Contact Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Contact_Name__c</fullName>
        <label>Contact Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contact_Title__c</fullName>
        <label>Contact Title</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Coordination_Call_Flag__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Check this box if a Coordination Call is needed.</description>
        <inlineHelpText>Check this box if a Coordination Call is needed.</inlineHelpText>
        <label>Coordination Flag</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Coordination_Call_Notes__c</fullName>
        <description>Enter notes for the Coordination Call, if checked.</description>
        <inlineHelpText>Enter notes for the Coordination Call, if checked.</inlineHelpText>
        <label>Coordination Notes</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Coordination_Call__c</fullName>
        <description>Date the coordination call flag was updated- updated by system workflow.</description>
        <inlineHelpText>Date the coordination call flag was updated- updated by system workflow.</inlineHelpText>
        <label>Coordination Call</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Cost_Factor__c</fullName>
        <defaultValue>1</defaultValue>
        <description>*** ADMIN ONLY ***
Cost Factor figured from Packages on insert.</description>
        <label>Cost Factor</label>
        <precision>9</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Custom_Billing_Address__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Custom Billing Address</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Custom_Physical_Address__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Custom Physical Address</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>DB_Competitor__c</fullName>
        <description>This is a field that is installed by and used with the Adoption Dashboard AppExchange package. If your org already has a similar field, you can change the reports that are part of the Adoption Dashboard package to use your custom field and can delete this field.</description>
        <label>DB Competitor</label>
        <picklist>
            <picklistValues>
                <fullName>Competitor A</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Competitor B</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Competitor C</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Dealer_Website_URL__c</fullName>
        <label>Dealer Website URL</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Dealership_Name__c</fullName>
        <label>Dealership Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Discount_Approval_Status__c</fullName>
        <label>Approval Status</label>
        <picklist>
            <picklistValues>
                <fullName>Accounting</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Approved</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Not Submitted</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Existing_Billing_Address_Conga__c</fullName>
        <formula>IF(
Custom_Billing_Address__c = True,
False,
True
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Existing Billing Address (Conga)</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Existing_Physical_Address_Conga__c</fullName>
        <formula>IF(
Custom_Physical_Address__c = True,
False,
True
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Existing Physical Address (Conga)</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Fax__c</fullName>
        <label>Fax</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Flag_for_BU_Help__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Updated by any sales user that requires assistance from another BU.</description>
        <inlineHelpText>Updated by any sales user that requires assistance from another BU.</inlineHelpText>
        <label>Flag for BU Help</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Fulfillment_Snapshot_Summary__c</fullName>
        <label>Fulfillment Snapshot Summary</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Includes_Website_Product__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Check if a website product is included.</description>
        <inlineHelpText>Check if a website product is included.</inlineHelpText>
        <label>Includes Website Product</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>IsQuickView__c</fullName>
        <defaultValue>false</defaultValue>
        <label>IsQuickView</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Last_Sync_DateTime__c</fullName>
        <label>Last Sync Date/Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Lost_Business_Formula__c</fullName>
        <description>The absolute value of the weighted revenue field.</description>
        <formula>ABS(  Weighted_Revenue__c  )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Lost Business Formula</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Lost_Reason__c</fullName>
        <description>Picklist of reasons that the opportunity is marked Closed Lost.</description>
        <label>Lost Reason</label>
        <picklist>
            <controllingField>StageName</controllingField>
            <picklistValues>
                <fullName>Budget</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Credit Issue</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Dealer Changed Mind</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Does Not See Value</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Inventory Issue</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Not Good Fit</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Opp Already Exists</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Out of Business</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Personnel Changes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Price Too High</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Recently Presented</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Renewal</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Save</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Manager_Email__c</fullName>
        <formula>Owner.Manager.Email</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Manager Email</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Manager_Name__c</fullName>
        <formula>Owner.Manager.FirstName &amp; &quot; &quot; &amp; Owner.Manager.LastName</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Manager Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Manager_Title__c</fullName>
        <formula>Owner.Manager.Title</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Manager Title</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Monthly_Advertising_Budget__c</fullName>
        <description>Haystak</description>
        <label>Monthly Advertising Budget</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Monthly_Management_Fee__c</fullName>
        <description>Haystak</description>
        <label>Monthly Management Fee</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Open_Working_Opps__c</fullName>
        <description>Field visible by Admin&apos;s only - and allows for system to determine if a new opp needs to be included into a coordination call prior to progressing - only counts open opportunities in planning or presentation stage.</description>
        <formula>Account.of_Opps__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Field visible by Admin&apos;s only - and allows for system to determine if a new opp needs to be included into a coordination call prior to progressing - only counts open opportunities in planning or presentation stage.</inlineHelpText>
        <label># Open Working Opps</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Opp_Link__c</fullName>
        <description>A hyperlink back to the opportunity, used in reporting.</description>
        <formula>HYPERLINK( Id , &quot;link&quot; , &quot;_blank&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Opp Link</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Opportunity_GUID__c</fullName>
        <label>Opportunity GUID</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Order_Generated__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Order Generated</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>PS_Forecast__c</fullName>
        <label>PS Forecast</label>
        <summarizedField>OpportunityLineItem.PS_Forecast__c</summarizedField>
        <summaryForeignKey>OpportunityLineItem.OpportunityId</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>PS_Probability__c</fullName>
        <formula>PS_Forecast__c *  Probability</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>PS Probability</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Parent_Clone_ID__c</fullName>
        <label>Parent Clone ID</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Phone__c</fullName>
        <label>Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Physical_City_Display__c</fullName>
        <formula>IF( 
Custom_Physical_Address__c = True, 
Physical_City__c, 
Account.ShippingCity 
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Physical City (Display)</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Physical_City__c</fullName>
        <label>Physical City</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Physical_State_Display__c</fullName>
        <formula>IF( 
Custom_Physical_Address__c = True, 
Physical_State__c, 
Account.ShippingState 
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Physical State (Display)</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Physical_State__c</fullName>
        <label>Physical State</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Physical_Street_Display__c</fullName>
        <formula>IF( 
Custom_Physical_Address__c = True, 
Physical_Street__c, 
Account.ShippingStreet 
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Physical Street (Display)</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Physical_Street__c</fullName>
        <label>Physical Street</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Physical_Zip_Postal_Code_Display__c</fullName>
        <formula>IF( 
Custom_Physical_Address__c = True, 
Physical_Zip_Postal_Code__c, 
Account.ShippingPostalCode 
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Physical Zip/Postal Code (Display)</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Physical_Zip_Postal_Code__c</fullName>
        <label>Physical Zip/Postal Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Product_Line__c</fullName>
        <description>The BU Type must be selected with the appropriate BU (i.e. ATC Media, KBB, TIM, vAuto,etc ) in order to be captured in reporting. The “Dealer Interested Product” field is only added to the opportunity title.</description>
        <inlineHelpText>The BU Type must be selected with the appropriate BU (i.e. ATC Media, KBB, TIM, vAuto,etc ) in order to be captured in reporting. The “Dealer Interested Product” field is only added to the opportunity title.</inlineHelpText>
        <label>Dealer Interested Product</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Products_Added__c</fullName>
        <description>A field used to manually enter the products added to the opportunity.</description>
        <label>Products Added</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Push_Counter__c</fullName>
        <description>This field tracks many times an Opportunity has been pushed from month to month.</description>
        <inlineHelpText>This field tracks many times an Opportunity has been pushed from month to month.</inlineHelpText>
        <label>Push Counter</label>
        <precision>6</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Related_Auto_Group__c</fullName>
        <description>Formula field that reads the Parent Account Name from the Account.</description>
        <formula>Account.Parent.Name</formula>
        <inlineHelpText>Formula field that reads the Parent Account Name from the Account.</inlineHelpText>
        <label>Related Auto Group</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Submit_For_Approval__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Submit For Approval</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Sync_Errors__c</fullName>
        <label>Sync Errors</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Sync_Status__c</fullName>
        <label>Sync Status</label>
        <picklist>
            <picklistValues>
                <fullName>Sync Completed</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Failed Integration</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Total_Discount__c</fullName>
        <description>Calculates the total discount percentage.</description>
        <formula>IF(Total_List_Price__c &gt;0,  ( Total_List_Price__c - Amount)/ Total_List_Price__c, null)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total Discount %</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Total_List_Price__c</fullName>
        <description>Total SUM of the List price Grand Total.</description>
        <label>Total List Price</label>
        <summarizedField>OpportunityLineItem.List_Price_Grand_Total__c</summarizedField>
        <summaryForeignKey>OpportunityLineItem.OpportunityId</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Used_Car_Inventory_Source__c</fullName>
        <label>Used Car Inventory Source</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Weighted_Revenue__c</fullName>
        <description>Amount * Probability</description>
        <formula>Amount * Probability</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Weighted Revenue</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Who_has_the_ball__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>A lookup field to identify the user that the opportunity is waiting on.</description>
        <label>Who has the ball</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Opportunities</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>mti_pb__PriceBook_To_Use__c</fullName>
        <label>PriceBook To Use</label>
        <picklist>
            <picklistValues>
                <fullName>ATC Price book</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>rrpu__Alert_Message__c</fullName>
        <description>This field is installed by Riptide Pop-up Alerts and is used in conjunction with the Pop-up Alert S-Control.</description>
        <inlineHelpText>If you enter text into this field the text will be displayed in a pop-up message whenever someone views this record.</inlineHelpText>
        <label>Alert Message</label>
        <type>TextArea</type>
    </fields>
    <listViews>
        <fullName>AllOpportunities</fullName>
        <columns>CORE.USERS.FULL_NAME</columns>
        <columns>OPPORTUNITY.NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>BU__c</columns>
        <columns>OPPORTUNITY.CLOSE_DATE</columns>
        <columns>OPPORTUNITY.TYPE</columns>
        <columns>OPPORTUNITY.STAGE_NAME</columns>
        <columns>OPPORTUNITY.AMOUNT</columns>
        <columns>OPPORTUNITY.PROBABILITY</columns>
        <columns>Weighted_Revenue__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>OPPORTUNITY.CLOSED</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <label>All Open Opportunities</label>
    </listViews>
    <listViews>
        <fullName>AllOpportunitiesHomenet</fullName>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>OPPORTUNITY.NAME</columns>
        <columns>OPPORTUNITY.CLOSE_DATE</columns>
        <columns>BU__c</columns>
        <columns>OPPORTUNITY.AMOUNT</columns>
        <columns>OPPORTUNITY.PROBABILITY</columns>
        <columns>OPPORTUNITY.STAGE_NAME</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>OPPORTUNITY.CLOSED</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <filters>
            <field>BU__c</field>
            <operation>equals</operation>
            <value>HomeNet</value>
        </filters>
        <label>All Open Opps - HomeNet</label>
        <sharedTo>
            <group>COE_Admins</group>
            <roleAndSubordinates>Stakeholder</roleAndSubordinates>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>AllOpportunitiesTIM</fullName>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>OPPORTUNITY.NAME</columns>
        <columns>OPPORTUNITY.CLOSE_DATE</columns>
        <columns>BU__c</columns>
        <columns>OPPORTUNITY.AMOUNT</columns>
        <columns>OPPORTUNITY.PROBABILITY</columns>
        <columns>OPPORTUNITY.STAGE_NAME</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>OPPORTUNITY.CLOSED</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <filters>
            <field>BU__c</field>
            <operation>equals</operation>
            <value>TIM</value>
        </filters>
        <label>All Open Opps - Tim</label>
        <sharedTo>
            <group>COE_Admins</group>
            <roleAndSubordinates>Stakeholder</roleAndSubordinates>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>AllOpportunitiesvauto</fullName>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>OPPORTUNITY.NAME</columns>
        <columns>OPPORTUNITY.CLOSE_DATE</columns>
        <columns>BU__c</columns>
        <columns>OPPORTUNITY.AMOUNT</columns>
        <columns>OPPORTUNITY.PROBABILITY</columns>
        <columns>OPPORTUNITY.STAGE_NAME</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>OPPORTUNITY.CLOSED</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <filters>
            <field>BU__c</field>
            <operation>equals</operation>
            <value>vAuto</value>
        </filters>
        <filters>
            <field>ACCOUNT.NAME</field>
            <operation>notContain</operation>
            <value>test dealer</value>
        </filters>
        <label>All Open Opps - vAuto</label>
        <sharedTo>
            <group>COE_Admins</group>
            <roleAndSubordinates>Stakeholder</roleAndSubordinates>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>AllOpportunitiesvin</fullName>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>OPPORTUNITY.NAME</columns>
        <columns>OPPORTUNITY.CLOSE_DATE</columns>
        <columns>BU__c</columns>
        <columns>OPPORTUNITY.AMOUNT</columns>
        <columns>OPPORTUNITY.PROBABILITY</columns>
        <columns>OPPORTUNITY.STAGE_NAME</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>OPPORTUNITY.CLOSED</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <filters>
            <field>BU__c</field>
            <operation>equals</operation>
            <value>VinSolutions</value>
        </filters>
        <label>All Open Opps - Vin</label>
        <sharedTo>
            <group>COE_Admins</group>
            <roleAndSubordinates>Stakeholder</roleAndSubordinates>
        </sharedTo>
    </listViews>
</CustomObject>